@@ -12,16 +12,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
-/**
- * Enrollment işlemlerini yöneten service sınıfı
- * - Öğrenci derse kayıt işlemleri
- * - Kontenjan kontrolü
- * - Tekrar kayıt kontrolü
- */
 @Slf4j
 @Service
 @RequiredArgsConstructor
@@ -31,48 +24,38 @@ public class EnrollmentService {
     private final CourseRepository courseRepository;
     private final UserRepository userRepository;
     
-    // Aktif enrollment durumları
-    private static final List<String> ACTIVE_ENROLLMENT_STATUSES = 
-        Arrays.asList("ACTIVE", "ENROLLED", "REGISTERED");
+    private static final List<String> ACTIVE_ENROLLMENT_STATUSES = List.of("ACTIVE", "ENROLLED", "REGISTERED");
+
+    private static final Set<String> ALLOWED_ENROLLMENT_STATUSES = Set.of(
+        "ACTIVE",
+        "ENROLLED",
+        "REGISTERED",
+        "DROPPED",
+        "CANCELLED"
+    );
     
-    /**
-     * Öğrenciyi derse kaydeder
-     * Validasyonlar:
-     * 1. Kontenjan dolu mu?
-     * 2. Öğrenci dersi zaten aldı mı?
-     * 
-     * @param studentId Öğrenci ID
-     * @param courseId Ders ID
-     * @return Oluşturulan enrollment
-     * @throws RuntimeException Kontenjan doluysa veya öğrenci dersi zaten aldıysa
-     */
     @Transactional
     public Enrollment enrollStudent(Long studentId, Long courseId) {
         log.info("Enrolling student ID: {} to course ID: {}", studentId, courseId);
         
-        // Öğrenci ve ders varlığını kontrol et
         User student = userRepository.findById(studentId)
             .orElseThrow(() -> new IllegalArgumentException("Öğrenci bulunamadı: " + studentId));
         
         Course course = courseRepository.findById(courseId)
-            .orElseThrow(() -> new RuntimeException("Ders bulunamadı: " + courseId));
+            .orElseThrow(() -> new IllegalArgumentException("Ders bulunamadı: " + courseId));
         
-        // Ders aktif mi kontrol et
         if (!course.isActive()) {
-            throw new IllegalArgumentException("Ders aktif değil, kayıt yapılamaz");
+            throw new IllegalArgumentException("Ders aktif değil; kayıt işlemi yapılamaz");
         }
         
-        // VALIDATION 1: Kontenjan kontrolü
         validateQuota(course);
         
-        // VALIDATION 2: Öğrenci dersi zaten aldı mı?
         validateDuplicateEnrollment(student, course);
         
-        // Enrollment oluştur
         Enrollment enrollment = Enrollment.builder()
             .student(student)
             .course(course)
-            .status("ENROLLED") // Varsayılan durum
+            .status("ENROLLED")
             .absenteeismCount(0)
             .enrollmentDate(LocalDateTime.now())
             .build();
@@ -85,109 +68,59 @@ public class EnrollmentService {
         return savedEnrollment;
     }
     
-    /**
-     * Kontenjan kontrolü yapar
-     * 
-     * @param course Kontrol edilecek ders
-     * @throws RuntimeException Kontenjan doluysa
-     */
     @Transactional(readOnly = true)
     public void validateQuota(Course course) {
-        // Mevcut aktif kayıt sayısını hesapla
-        List<Enrollment> allEnrollments = enrollmentRepository.findAll();
-        long currentEnrollments = allEnrollments.stream()
-            .filter(e -> e.getCourse().getId().equals(course.getId()))
-            .filter(e -> ACTIVE_ENROLLMENT_STATUSES.contains(e.getStatus()))
-            .count();
+        long currentEnrollments = enrollmentRepository.countByCourseIdAndStatusIn(course.getId(), ACTIVE_ENROLLMENT_STATUSES);
         
         if (currentEnrollments >= course.getQuota()) {
             String message = String.format(
-                "Kontenjan dolu! Ders: %s, Mevcut kayıt: %d, Kontenjan: %d",
+                "Kontenjan dolu. Ders: %s, Mevcut kayıt: %d, Kontenjan: %d",
                 course.getCode(), currentEnrollments, course.getQuota());
             log.warn(message);
-            throw new RuntimeException(message);
+            throw new IllegalArgumentException(message);
         }
         
         log.debug("Quota check passed for course: {}, Current: {}, Quota: {}", 
             course.getCode(), currentEnrollments, course.getQuota());
     }
     
-    /**
-     * Öğrencinin dersi zaten alıp almadığını kontrol eder
-     * 
-     * @param student Kontrol edilecek öğrenci
-     * @param course Kontrol edilecek ders
-     * @throws RuntimeException Öğrenci dersi zaten aldıysa
-     */
     @Transactional(readOnly = true)
     public void validateDuplicateEnrollment(User student, Course course) {
-        // Öğrencinin bu derse aktif kaydı var mı kontrol et
-        List<Enrollment> allEnrollments = enrollmentRepository.findAll();
-        boolean exists = allEnrollments.stream()
-            .anyMatch(e -> e.getStudent().getId().equals(student.getId()) &&
-                          e.getCourse().getId().equals(course.getId()) &&
-                          ACTIVE_ENROLLMENT_STATUSES.contains(e.getStatus()));
+        boolean exists = enrollmentRepository.existsByStudentIdAndCourseIdAndStatusIn(
+            student.getId(),
+            course.getId(),
+            ACTIVE_ENROLLMENT_STATUSES
+        );
         
         if (exists) {
             String message = String.format(
-                "Öğrenci (%s) bu dersi (%s) zaten almış durumda",
+                "Öğrenci (%s) bu derse (%s) zaten kayıtlı",
                 student.getUsername(), course.getCode());
             log.warn(message);
-            throw new RuntimeException(message);
+            throw new IllegalArgumentException(message);
         }
         
         log.debug("Duplicate enrollment check passed for student: {}, course: {}", 
             student.getUsername(), course.getCode());
     }
     
-    /**
-     * Öğrencinin bir derse kayıtlı olup olmadığını kontrol eder
-     * 
-     * @param studentId Öğrenci ID
-     * @param courseId Ders ID
-     * @return true eğer öğrenci derse kayıtlıysa
-     */
     @Transactional(readOnly = true)
     public boolean isStudentEnrolled(Long studentId, Long courseId) {
-        User student = userRepository.findById(studentId)
-            .orElseThrow(() -> new IllegalArgumentException("Öğrenci bulunamadı: " + studentId));
-        
-        Course course = courseRepository.findById(courseId)
-            .orElseThrow(() -> new RuntimeException("Ders bulunamadı: " + courseId));
-        
-        List<Enrollment> allEnrollments = enrollmentRepository.findAll();
-        return allEnrollments.stream()
-            .anyMatch(e -> e.getStudent().getId().equals(student.getId()) &&
-                          e.getCourse().getId().equals(course.getId()) &&
-                          ACTIVE_ENROLLMENT_STATUSES.contains(e.getStatus()));
+        if (studentId == null || courseId == null) {
+            throw new IllegalArgumentException("Öğrenci id ve ders id boş olamaz");
+        }
+
+        return enrollmentRepository.existsByStudentIdAndCourseIdAndStatusIn(studentId, courseId, ACTIVE_ENROLLMENT_STATUSES);
     }
     
-    /**
-     * Öğrencinin bir derse kaydını iptal eder (DROPPED olarak işaretler)
-     * 
-     * @param studentId Öğrenci ID
-     * @param courseId Ders ID
-     */
     @Transactional
     public void dropEnrollment(Long studentId, Long courseId) {
         log.info("Dropping enrollment for student ID: {} from course ID: {}", 
             studentId, courseId);
-        
-        User student = userRepository.findById(studentId)
-            .orElseThrow(() -> new IllegalArgumentException("Öğrenci bulunamadı: " + studentId));
-        
-        Course course = courseRepository.findById(courseId)
-            .orElseThrow(() -> new RuntimeException("Ders bulunamadı: " + courseId));
-        
-        // Öğrencinin bu derse kaydını bul
-        List<Enrollment> allEnrollments = enrollmentRepository.findAll();
-        Enrollment enrollment = allEnrollments.stream()
-            .filter(e -> e.getStudent().getId().equals(studentId) &&
-                        e.getCourse().getId().equals(courseId) &&
-                        ACTIVE_ENROLLMENT_STATUSES.contains(e.getStatus()))
-            .findFirst()
-            .orElseThrow(() -> new IllegalArgumentException(
-                "Öğrenci bu derse kayıtlı değil"));
+
+        Enrollment enrollment = enrollmentRepository
+            .findFirstByStudentIdAndCourseIdAndStatusIn(studentId, courseId, ACTIVE_ENROLLMENT_STATUSES)
+            .orElseThrow(() -> new IllegalArgumentException("Öğrenci bu derse kayıtlı değil"));
         
         enrollment.setStatus("DROPPED");
         enrollmentRepository.save(enrollment);
@@ -195,34 +128,51 @@ public class EnrollmentService {
         log.info("Enrollment dropped successfully for student ID: {} from course ID: {}", 
             studentId, courseId);
     }
-    
-    /**
-     * Belirli bir derse ait tüm aktif kayıtları getirir
-     */
-    @Transactional(readOnly = true)
-    public List<Enrollment> getActiveEnrollmentsByCourse(Long courseId) {
-        Course course = courseRepository.findById(courseId)
-            .orElseThrow(() -> new RuntimeException("Ders bulunamadı: " + courseId));
-        
-        List<Enrollment> allEnrollments = enrollmentRepository.findAll();
-        return allEnrollments.stream()
-            .filter(e -> e.getCourse().getId().equals(courseId))
-            .filter(e -> ACTIVE_ENROLLMENT_STATUSES.contains(e.getStatus()))
-            .collect(Collectors.toList());
+
+    @Transactional
+    public Enrollment updateEnrollmentStatus(Long enrollmentId, String status) {
+        if (enrollmentId == null) {
+            throw new IllegalArgumentException("Kayıt id boş olamaz");
+        }
+        String safeStatus = status == null ? "" : status.trim().toUpperCase();
+        if (safeStatus.isBlank()) {
+            throw new IllegalArgumentException("Kayıt durumu boş olamaz");
+        }
+        if (!ALLOWED_ENROLLMENT_STATUSES.contains(safeStatus)) {
+            throw new IllegalArgumentException("Desteklenmeyen kayıt durumu: " + safeStatus);
+        }
+
+        Enrollment enrollment = enrollmentRepository.findById(enrollmentId)
+            .orElseThrow(() -> new IllegalArgumentException("Kayıt bulunamadı: " + enrollmentId));
+
+        enrollment.setStatus(safeStatus);
+        Enrollment saved = enrollmentRepository.save(enrollment);
+        log.info("Enrollment status updated: id={}, status={}", saved.getId(), saved.getStatus());
+        return saved;
     }
     
-    /**
-     * Belirli bir öğrencinin tüm aktif kayıtlarını getirir
-     */
+    @Transactional(readOnly = true)
+    public List<Enrollment> getActiveEnrollmentsByCourse(Long courseId) {
+        if (courseId == null) {
+            throw new IllegalArgumentException("Ders id boş olamaz");
+        }
+        return enrollmentRepository.findByCourseIdAndStatusIn(courseId, ACTIVE_ENROLLMENT_STATUSES);
+    }
+    
     @Transactional(readOnly = true)
     public List<Enrollment> getActiveEnrollmentsByStudent(Long studentId) {
-        User student = userRepository.findById(studentId)
-            .orElseThrow(() -> new IllegalArgumentException("Öğrenci bulunamadı: " + studentId));
-        
-        List<Enrollment> allEnrollments = enrollmentRepository.findAll();
-        return allEnrollments.stream()
-            .filter(e -> e.getStudent().getId().equals(studentId))
-            .filter(e -> ACTIVE_ENROLLMENT_STATUSES.contains(e.getStatus()))
-            .collect(Collectors.toList());
+        if (studentId == null) {
+            throw new IllegalArgumentException("Öğrenci id boş olamaz");
+        }
+        return enrollmentRepository.findByStudentIdAndStatusIn(studentId, ACTIVE_ENROLLMENT_STATUSES);
+    }
+
+    @Transactional(readOnly = true)
+    public Enrollment getEnrollmentById(Long enrollmentId) {
+        if (enrollmentId == null) {
+            throw new IllegalArgumentException("Kayıt id boş olamaz");
+        }
+        return enrollmentRepository.findById(enrollmentId)
+            .orElseThrow(() -> new IllegalArgumentException("Kayıt bulunamadı: " + enrollmentId));
     }
 }
